tests/snapshots/examples_fixtures/strict_types__type_class_superclass.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/strict_types/type_class_superclass.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
