tests/snapshots/examples_fixtures/strict_types__type_param_constraints.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/strict_types/type_param_constraints.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
