tests/snapshots/examples_fixtures/strict_types__typed_arithmetic.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/strict_types/typed_arithmetic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
