tests/snapshots/examples_fixtures/strict_types__typed_closures.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/strict_types/typed_closures.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
