tests/snapshots/examples_fixtures/strict_types__typed_higher_order.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/strict_types/typed_higher_order.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
